--- a/content/contribute.html
+++ b/content/contribute.html
@@ -72,35 +72,8 @@ type: basic
   <h2 class="h1 bold center"><b>Currently available occupations</b></h2>
   <div class="break"></div>
 
-  <p>What are you good at? Cho<section class="container">
-  <div class="break"></div><div class="break"></div><div class="break"></div>
-  <h1 class="h2 bold center"><b>Maybe some of these are relevant<span class="highlighted">.</span></b></h1>
-  <div class="break"></div>
-
-  <div class="row mobile-row text-row">
-    <figure class="col">
-      <h2 class="h5 bold"><mark>Sign up for Chorale</mark></h2>
-      <p>If you are 13 or older, and do not mind waiting less than 48 hours, then you
-      are eligible to sign up for Chorale! So go do it! It costs nothing to try something
-      new.</p>
-      <a href="/early-access">Gimme the app</a>
-    </figure>
-    <figure class="col">
-      <h2 class="h5 bold"><mark>Learn more about Chorale</mark></h2>
-      <p>Chorale is a revolutionary open source music and podcast app available for use on
-      any device with a modern web browser, including your phone.</p>
-      <a href="/early-access">See product tour</a>
-    </figure>
-    <figure class="col">
-      <h2 class="h5 bold"><mark>Publish to Chorale</mark></h2>
-      <p>Artists are our #1 priority. We love you! Chorale gives artists the tools to
-      shape their profiles however they want and get even more listeners.</p>
-      <a href="/early-access">Visit Creator Center</a>
-    </figure>
-  </div>
-  <div class="break"></div><div class="break"></div><div class="break"></div>
-</section>ose the type of work you want to do.<br>
-  Items in pink are high priority, those in purple are medium priority.<br>
+  <p>What are you good at? Choose the type of work you want to do.<br>
+  Items up front are high priority, other colored items are medium priority.<br>
   If an item is not highlighted, it is not deemed important.</p>
   <div class="btn-group">
     <a href="#no" class="btn btn--primary">Back-end web development</a>
@@ -123,7 +96,7 @@ type: basic
   <div class="break"></div><hr class="fancy center"><div class="break">
 
   <div class="center" id="no">
-    <h3 class="h4 bold caps"><mark>Thanks for your interest!</mark></h3>
+    <h3 class="h4 bold caps">Thanks for your interest!</h3>
     <p>This is a bit embarrasing. We haven’t prepared anything for you yet.<br>
        If you’re interested, and we hope you are, then please get in touch!</p>
     <div class="break"></div>
